<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:src="@drawable/ic_close_dialog"
        android:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_name"
        style="@style/InputForm"
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_60"
        android:layout_marginEnd="@dimen/margin_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_name"
            style="@style/LoginInputAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_id"
        style="@style/InputForm"
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_id"
            style="@style/LoginInputAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_identification"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        style="@style/InputForm"
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_password"
            style="@style/LoginInputAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_phone_number"
        style="@style/InputForm"
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_phone_number"
            style="@style/LoginInputAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/check_farmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/NormalInputAppearance"
        android:gravity="center"
        android:text="@string/if_am_farmer"
        app:layout_constraintStart_toStartOf="@id/text_input_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/text_input_phone_number"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        style="@style/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_100"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_phone_number" />



</androidx.constraintlayout.widget.ConstraintLayout>